[build-system]
requires = [
  "hatchling >= 1.26",
  "requests >= 2.32.4"
]
build-backend = "hatchling.build"
[project]
name = "ghtoolscraper_rchotacode"
version = "0.0.1"
authors = [
  { name="Ronan Chota", email="ri03@outlook.com" },
]
description = "This package scrapes github repositories and formats them for agents to request file contents without filling model context with uncessary files and requiring large datasets"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
packages = ["src/ghtoolscraper_rchotacode"]

[project.urls]
Homepage = "https://github.com/rchotacode/GitHubScraper"
Issues = "https://github.com/rchotacode/GitHubScraper/issues"